Update name from 'Cini Laki' to 'Cini Taban'

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
       <nav>
         <div class="row">
-          <span class="brand">Cini Laki</span>
+          <span class="brand">Cini Taban</span>
           <span class="chip" title="Location">🌎 Winnipeg, CA</span>
           <span class="chip" title="Role">💻 Frontend Developer</span>
         </div>
@@ -84,7 +84,7 @@
       <div class="grid">
         <p class="kicker">Hello World!</p>
         <h1>Building smooth, fast web experiences.</h1>
-        <p class="muted">I’m <strong>Cini Laki</strong>, a frontend developer focused on clean UI, solid UX, and performant React apps. I love turning ideas into shippable features.</p>
+        <p class="muted">I’m <strong>Cini Taban</strong>, a frontend developer focused on clean UI, solid UX, and performant React apps. I love turning ideas into shippable features.</p>
         <div class="row">
           <a class="btn" href="#projects">See projects</a>
           <a class="btn ghost" href="assets/Cini_Laki_CV.pdf" download>Download CV</a>
